# onboard_px4

./: CMakeLists.txt  README.md  package.xml  px4_mission_node.cpp
config/: topics.yaml
launch/: atlas.launch  multimaster.launch  px4-simulation.launch  resisto.launch  sim_MUAV_PX4.launch
scripts/: gcs_gateway.py  px4_command_gps_wp.py
src/: px4_mission_node.cpp
